# bias-init-analysis

./: .gitignore  README.md  ResNet.py  face_recognition_model_comparison.py  model_analysis.py  modules.py  pyproject.toml  requirements.txt  seeds_experiment_comparison.py  utils.py  visualize_network_architecture.ipynb
saliency results/: academic_table_first3metrics.csv  data_analysis.ipynb
saliency results/data/: cc_avg_cluster_size_vs_threshold_table.csv  cc_avg_inter_cluster_distance_vs_threshold_table.csv  cc_cluster_size_ratio_vs_threshold_table.csv  cc_max_inter_cluster_distance_vs_threshold_table.csv  cc_num_clusters_vs_threshold_table.csv  coverage_pvalues_bias_comparison.csv  salient_pixels_percent_vs_threshold_table.csv
saliency results/graphs/: academic_table_pvalues_first3metrics.csv  attribution_pvalues_bias_comparison.csv
saliency_project/: compute_saliency.py  metrics.py  plots.py  run_analysis.py
saliency_project/face_parts/: landmarks.py  masks.py
